--- a/beta-manager-api/package.json
+++ b/beta-manager-api/package.json
@@ -17,9 +17,12 @@
     "@types/express": "^5.0.6",
     "@types/node": "^25.1.0",
     "axios": "^1.13.4",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
+    "jsonwebtoken": "^9.0.2",
     "node-cron": "^4.2.1",
     "resend": "^6.9.1",
     "ts-node": "^10.9.2",
@@ -28,8 +31,11 @@
     "zod": "^4.3.6"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.8",
     "@types/cors": "^2.8.19",
     "@types/jest": "^30.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node-cron": "^3.0.11",
     "@types/supertest": "^6.0.3",
     "jest": "^30.2.0",
