--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -3,7 +3,7 @@ region: ams
 
 services:
   - name: api
-    dockerfile_path: Dockerfile
+    dockerfile_path: beta-manager-api/Dockerfile
     source_dir: beta-manager-api
     github:
       repo: businessdatasolutions/beta-manager
