--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -3,7 +3,9 @@ region: ams
 
 services:
   - name: api
-    dockerfile_path: Dockerfile
+    environment_slug: node-js
+    build_command: npm run build
+    run_command: npm start
     source_dir: beta-manager-api
     github:
       repo: businessdatasolutions/beta-manager
@@ -60,15 +62,16 @@ services:
       - key: PLAY_STORE_LINK
         value: "${PLAY_STORE_LINK}"
 
+static_sites:
   - name: web
-    dockerfile_path: Dockerfile
+    environment_slug: node-js
+    build_command: npm install && npm run build
+    output_dir: dist
     source_dir: beta-manager-web
     github:
       repo: businessdatasolutions/beta-manager
       branch: main
       deploy_on_push: true
-    http_port: 80
-    instance_count: 1
-    instance_size_slug: basic-xxs
     routes:
       - path: /
+    catchall_document: index.html
