--- a/.do/app.yaml
+++ b/.do/app.yaml
@@ -16,8 +16,11 @@ services:
     instance_size_slug: basic-xxs
     routes:
       - path: /api
+        preserve_path_prefix: true
       - path: /auth
+        preserve_path_prefix: true
       - path: /public
+        preserve_path_prefix: true
     health_check:
       http_path: /public/health
       initial_delay_seconds: 10
